--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/react": "^16.9.32",
     "@types/react-dom": "^16.9.6",
     "@types/react-router-dom": "^5.1.3",
+    "env-cmd": "^10.1.0",
+    "firebase": "^7.13.2",
     "formik": "^2.1.4",
     "install": "^0.13.0",
     "npm": "^6.14.4",
