--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^7.13.2",
     "formik": "^2.1.4",
     "install": "^0.13.0",
+    "moment": "^2.24.0",
     "npm": "^6.14.4",
     "react": "^16.13.1",
     "react-device-detect": "^1.11.14",
