--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "env-cmd": "^10.1.0",
     "firebase": "^7.13.2",
     "formik": "^2.1.4",
+    "html-react-parser": "^0.10.3",
     "install": "^0.13.0",
     "moment": "^2.24.0",
     "npm": "^6.14.4",
